--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -12,6 +12,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/blink-theme-jqm.css" />
         <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
         <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
+        <link href="css/responsiveslides.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="css/style.css" />
         <link href="css/blink.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -324,5 +325,7 @@ and open the template in the editor.
                                         });
                             }
         </script>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBOANqhrn5i6-jYE9XqXyaVClI0NvGLOQw&sensor=true&libraries=geometry"></script>
+        <script src="js/responsiveslides.min.js" type="text/javascript"></script>
     </body>
 </html>
